
* Refactored output layer to use a dedicated module, in order to
  facilitate integration with Nagios (NagiosOutputWriter class)

* Refactored subprocess handling in order to isolate stdin/stderr/stdout
  channels (command_wrappers module)

* Refactored hook scripts management

* Extracted logging configuration and userid enforcement from the
  configuration class.

* Implemented the rebuild-xlogdb command (Closes #27)

* Added documentation for tablespaces relocation (#22)

Version 1.2.3 - 5 September 2013

* Added support for PostgreSQL 9.3

* Added support for the "--target-name" recovery option, which allows to
  restore to a named point previously specified with pg_create_restore_point
  (only for PostgreSQL 9.1 and above users)

* Fixed bug #27 about flock() usage with barman.lockfile (many thanks to
  Damon Snyder <damonsnyder at users.sf.net>)

* Introduced Python 3 compatibility

Version 1.2.2 - 24 June 2013

* Fix python 2.6 compatibility

Version 1.2.1 - 17 June 2013

* Added the "bandwidth_limit" global/server option which allows
  to limit the I/O bandwidth (in KBPS) for backup and recovery operations

* Added the "tablespace_bandwidth_limit" global/server option which allows
  to limit the I/O bandwidth (in KBPS) for backup and recovery operations
  on a per tablespace basis

* Added /etc/barman/barman.conf as default location

* Bug fix: avoid triggering the minimum_redundancy check
  on FAILED backups (thanks to Jérôme Vanandruel)

Version 1.2.0 - 31 Jan 2013

* Added the "retention_policy_mode" global/server option which defines
  the method for enforcing retention policies (currently only "auto")

* Added the "minimum_redundancy" global/server option which defines
  the minimum number of backups to be kept for a server

* Added the "retention_policy" global/server option which defines
  retention policies management based on redunancy (e.g. REDUNDANCY 4)
  or recovery window (e.g. RECOVERY WINDOW OF 3 MONTHS)
