@@ -44,7 +44,8 @@ class Server(object):
         'custom_decompression_filter', 'retention_policy_mode',
         'retention_policy',
         'wal_retention_policy', 'pre_backup_script', 'post_backup_script',
-        'minimum_redundancy', 'bandwidth_limit', 'tablespace_bandwidth_limit'
+        'minimum_redundancy', 'bandwidth_limit', 'tablespace_bandwidth_limit',
+        'immediate_checkpoint',
     ]
 
     BARMAN_KEYS = [
@@ -65,7 +66,8 @@ class Server(object):
         'lock_file': r'%(backup_directory)s/%(name)s.lock',
         'retention_policy_mode': 'auto',
         'wal_retention_policy': 'main',
-        'minimum_redundancy': '0'
+        'minimum_redundancy': '0',
+        'immediate_checkpoint': 'false',
     }
 
     def __init__(self, config, name):
