@@ -1,13 +1,13 @@
 '\" t
 .\"     Title: barman
 .\"    Author: [see the "AUTHORS" section]
-.\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
-.\"      Date: 12/16/2013
+.\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
+.\"      Date: 01/20/2014
 .\"    Manual: \ \&
 .\"    Source: \ \&
 .\"  Language: English
 .\"
-.TH "BARMAN" "1" "12/16/2013" "\ \&" "\ \&"
+.TH "BARMAN" "1" "01/20/2014" "\ \&" "\ \&"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -135,6 +135,18 @@ all
 as
 SERVERNAME
 to perform a backup of all the configured servers\&.
+.PP
+\fB\-\-immediate\-checkpoint\fR
+.RS 4
+forces the initial checkpoint to be done as quickly as possible\&. Overrides value of the parameter
+immediate_checkpoint, if present in the configuration file\&.
+.RE
+.PP
+\fB\-\-no\-immediate\-checkpoint\fR
+.RS 4
+forces to wait for the checkpoint\&. Overrides value of the parameter
+immediate_checkpoint, if present in the configuration file\&.
+.RE
 .RE
 .PP
 \fBlist\-backup SERVERNAME\fR
@@ -236,7 +248,6 @@ Possible values for TARGET_TYPE are:
 .sp -1
 .IP \(bu 2.3
 .\}
-
 \fBdata\fR
 \- lists just the data files;
 .RE
@@ -249,7 +260,6 @@ Possible values for TARGET_TYPE are:
 .sp -1
 .IP \(bu 2.3
 .\}
-
 \fBstandalone\fR
 \- lists the base backup files, including required WAL files;
 .RE
@@ -262,7 +272,6 @@ Possible values for TARGET_TYPE are:
 .sp -1
 .IP \(bu 2.3
 .\}
-
 \fBwal\fR
 \- lists all the WAL files between the start of the base backup and the end of the log / the start of the following base backup (depending on whether the specified base backup is the most recent one available);
 .RE
@@ -275,7 +284,6 @@ Possible values for TARGET_TYPE are:
 .sp -1
 .IP \(bu 2.3
 .\}
-
 \fBfull\fR
 \- same as data + wal\&. Defaults to standalone
 .RE
@@ -404,6 +412,28 @@ Gabriele Bartolini <gabriele\&.bartolini@2ndquadrant\&.it>
 .sp -1
 .IP \(bu 2.3
 .\}
+Giuseppe Broccolo <giuseppe\&.broccolo@2ndquadrant\&.it> (core team, QA)
+.RE
+.sp
+.RS 4
+.ie n \{\
+\h'-04'\(bu\h'+03'\c
+.\}
+.el \{\
+.sp -1
+.IP \(bu 2.3
+.\}
+Giulio Calacoci <giulio\&.calacoci@2ndquadrant\&.it> (core team, developer)
+.RE
+.sp
+.RS 4
+.ie n \{\
+\h'-04'\(bu\h'+03'\c
+.\}
+.el \{\
+.sp -1
+.IP \(bu 2.3
+.\}
 Marco Nenciarini <marco\&.nenciarini@2ndquadrant\&.it>
 .RE
 .sp
@@ -421,7 +451,29 @@ Carlo Ascani
 .RE
 .SH "RESOURCES"
 .sp
-Homepage: http://www\&.pgbarman\&.org/
+.RS 4
+.ie n \{\
+\h'-04'\(bu\h'+03'\c
+.\}
+.el \{\
+.sp -1
+.IP \(bu 2.3
+.\}
+Homepage:
+http://www\&.pgbarman\&.org/
+.RE
+.sp
+.RS 4
+.ie n \{\
+\h'-04'\(bu\h'+03'\c
+.\}
+.el \{\
+.sp -1
+.IP \(bu 2.3
+.\}
+Documentation:
+http://docs\&.pgbarman\&.org/
+.RE
 .SH "COPYING"
 .sp
 Barman is the exclusive property of 2ndQuadrant Italia and its code is distributed under GNU General Public License v3\&.
