@@ -1,13 +1,13 @@
 '\" t
 .\"     Title: barman
 .\"    Author: [see the "AUTHORS" section]
-.\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
-.\"      Date: 07/08/2013
+.\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
+.\"      Date: 01/20/2014
 .\"    Manual: \ \&
 .\"    Source: \ \&
 .\"  Language: English
 .\"
-.TH "BARMAN" "5" "07/08/2013" "\ \&" "\ \&"
+.TH "BARMAN" "5" "01/20/2014" "\ \&" "\ \&"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -114,6 +114,16 @@ Directory where incoming WAL files are archived into\&. Global/Server\&.
 Lock file for a backup in progress\&. Global/Server\&.
 .RE
 .PP
+\fBlog_file\fR
+.RS 4
+Location of Barman\(cqs log file\&. Global\&.
+.RE
+.PP
+\fBlog_level\fR
+.RS 4
+Level of logging (DEBUG, INFO, WARNING, ERROR, CRITICAL)\&. Global\&.
+.RE
+.PP
 \fBcustom_compression_filter\fR
 .RS 4
 Compression algorithm applied to WAL files\&. Global/Server\&.
@@ -163,6 +173,14 @@ This option allows you to specify a maximum transfer rate in kilobytes per secon
 .RS 4
 This option allows you to specify a maximum transfer rate in kilobytes per second, by specifying a comma separated list of tablespaces (pairs TBNAME:BWLIMIT)\&. A value of zero specifies no limit (default)\&. Global/Server\&.
 .RE
+.PP
+\fBimmediate_checkpoint\fR
+.RS 4
+This option allows you to control the way PostgreSQL handles checkpoint at the start of the backup\&. If set to
+false
+(default), Postgres will wait for a checkpoint to happen before allowing the start of the backup\&. If set to
+true, an immediate checkpoint is requested\&.
+.RE
 .SH "HOOK SCRIPTS"
 .sp
 The script definition is passed to a shell and can return any exit code\&.
@@ -193,7 +211,6 @@ phase)
 .PP
 BARMAN_PHASE
 .RS 4
-
 \fIpre\fR
 or
 \fIpost\fR
@@ -284,6 +301,28 @@ Gabriele Bartolini <gabriele\&.bartolini@2ndquadrant\&.it>
 .sp -1
 .IP \(bu 2.3
 .\}
+Giuseppe Broccolo <giuseppe\&.broccolo@2ndquadrant\&.it> (core team, QA)
+.RE
+.sp
+.RS 4
+.ie n \{\
+\h'-04'\(bu\h'+03'\c
+.\}
+.el \{\
+.sp -1
+.IP \(bu 2.3
+.\}
+Giulio Calacoci <giulio\&.calacoci@2ndquadrant\&.it> (core team, developer)
+.RE
+.sp
+.RS 4
+.ie n \{\
+\h'-04'\(bu\h'+03'\c
+.\}
+.el \{\
+.sp -1
+.IP \(bu 2.3
+.\}
 Marco Nenciarini <marco\&.nenciarini@2ndquadrant\&.it>
 .RE
 .sp
@@ -301,7 +340,29 @@ Carlo Ascani
 .RE
 .SH "RESOURCES"
 .sp
-Homepage: http://www\&.pgbarman\&.org/
+.RS 4
+.ie n \{\
+\h'-04'\(bu\h'+03'\c
+.\}
+.el \{\
+.sp -1
+.IP \(bu 2.3
+.\}
+Homepage:
+http://www\&.pgbarman\&.org/
+.RE
+.sp
+.RS 4
+.ie n \{\
+\h'-04'\(bu\h'+03'\c
+.\}
+.el \{\
+.sp -1
+.IP \(bu 2.3
+.\}
+Documentation:
+http://docs\&.pgbarman\&.org/
+.RE
 .SH "COPYING"
 .sp
 Barman is the exclusive property of 2ndQuadrant Italia and its code is distributed under GNU General Public License v3\&.
