@@ -33,6 +33,9 @@ log_file = /var/log/barman/barman.log
 ; Global bandwidth limit in KBPS - default 0 (meaning no limit)
 ;bandwidth_limit = 4000
 
+; Immediate checkpoint for backup command
+;immediate_checkpoint = false
+
 ;; ; 'main' PostgreSQL Server configuration
 ;; [main]
 ;; ; Human readable description
